# Medical-Foundation-Model-Evaluation

./: .gitignore  0_0_hugging_face.ipynb  0_1_sample_data_ptx_classification_segmentation.ipynb  0_2_sample_data_cm_classification.ipynb  0_3_sample_data_ptx_segmentation.ipynb  1_0_ptx_classification_experiments.py  1_0_ptx_classification_experiments.sh  1_1_cm_classification_experiments.py  1_1_cm_classification_experiments.sh  2_0_ptx_segmentation_experiments.py  2_0_ptx_segmentation_experiments.sh  2_1_cm_segmentation_experiments.py  2_1_cm_segmentation_experiments.sh  3_cross-val_performance.ipynb  3_fine-tuning.ipynb  4_0_calculate_ptx_volume.ipynb  4_1_ptx_cla_subgroup_analysis.ipynb  5_0_stats.ipynb  5_1_stats_subgroup.ipynb  5_2_Visualize_seg_result.ipynb  README.md  config_ptx_cla.py  config_ptx_seg.py  pyproject.toml  table1.ipynb
Ark+/: 1_0_ptx_classification_experiments.py  1_1_cm_classification_experiments.py  1_1_cm_classification_experiments.sh  2_0_ptx_segmentation_experiments.py  2_0_ptx_segmentation_experiments.sh  2_1_cm_segmentation_experiments.py  2_1_cm_segmentation_experiments.sh  README.md  config_cm_cla.py  pyproject.toml
Ark+/models/: FMClassifier.py  FMSegmentator.py
Ark+/transforms/: Transform4Ark.py
Ark+/utils/: analyze_errors.py  evaluate_segmentation_model.py  fine_tune_classification_model.py  fine_tune_segmentation_model.py  get_dataloaders.py  get_seg_dataloaders.py  plot_images.py
MedImageInsights/: 1_0_ptx_classification_experiments.py  1_0_ptx_classification_experiments.sh  1_1_cm_classification_experiments.py  README.md  (+6 more)
(+36 files in other folders)
